
- Added new `suggestionlist.hide_hints` setting to control whether to hide input hints while using the suggestion list (input hints are normally controlled by the `comment_row.show_hints` setting, and are hidden by default while using the suggestion list).
- Added a type-ahead optimization in popup lists to avoid redundant or unnecessary processing during incremental find or filter input.
- Fixed position of highlights in the suggestion list to consistently use the earliest matching position.
- Fixed [#835](https://github.com/chrisant996/clink/issues/835); Unicode input is garbled in popup lists (regression introduced in v1.8.0).
- Fixed edge cases where certain Unicode input could be misinterpreted in popup lists and in `clink-select-complete`.
- Fixed potential for a buffer overread if invalid UTF8 bytes are encountered.
- Internal logging improvements.

#### v1.9.11

- Added new Lua API [console.getoriginaltitle()](#console.getoriginaltitle) which gets what the OS considers to be the original console title.
- Fixed a potential crash if the terminal title is an empty string; an OS API is not behaving as documented (regression introduced in v1.9.10).

#### v1.9.10

- Changed the default binding for <kbd>F7</kbd> to `clink-popup-history` instead of `win-history-list`.
- Fixed potential for incorrect input line coloring after using `clink-popup-history` to choose a history line.
- Fixed `win-history-list` with typed input (regression introduced in v1.6.13).
- Fixed rare issues with the `cmd.admin_title_prefix` setting.
- Internal logging improvements.

#### v1.9.9

- Fixed [#829](https://github.com/chrisant996/clink/issues/829); attempt to compare nil with number (regression introduced in v1.9.8).

#### v1.9.8

- Changed [os.sleep()](#os.sleep) so it yields when called in a coroutine.
- Fixed the "Display all...?" prompt in `clink-select-complete` to show up at the right times.