@@ -98,8 +98,8 @@ class command_line_states
 {
 public:
     command_line_states() { clear(); }
-    void set(const char* line_buffer, uint32 line_length, uint32 line_cursor, const std::vector<word>& words, collect_words_mode mode, const std::vector<command>& commands);
-    void set(const line_buffer& buffer, const std::vector<word>& words, collect_words_mode mode, const std::vector<command>& commands);
+    void set(const char* line_buffer, uint32 line_length, uint32 line_cursor, const std::vector<word>& words, collect_words_mode mode, const std::vector<command>& commands, bool use_recognizer);
+    void set(const line_buffer& buffer, const std::vector<word>& words, collect_words_mode mode, const std::vector<command>& commands, bool use_recognizer);
     uint32 break_end_word(uint32 truncate, uint32 keep, bool discard);
     void split_for_hinter();
     void clear();
