@@ -6,6 +6,7 @@
 
 - Added new `suggestionlist.hide_hints` setting to control whether to hide input hints while using the suggestion list (input hints are normally controlled by the `comment_row.show_hints` setting, and are hidden by default while using the suggestion list).
 - Added a type-ahead optimization in popup lists to avoid redundant or unnecessary processing during incremental find or filter input.
+- Improve command line parsing to recognize when an executable exists with the same name as a built-in CMD command (e.g. "echo.exe") and predict whether CMD will run the built-in CMD command or the executable file.  This affects argmatchers, completion, and input line coloring.
 - Fixed position of highlights in the suggestion list to consistently use the earliest matching position.
 - Fixed [#835](https://github.com/chrisant996/clink/issues/835); Unicode input is garbled in popup lists (regression introduced in v1.8.0).
 - Fixed edge cases where certain Unicode input could be misinterpreted in popup lists and in `clink-select-complete`.
